<resources>
    <string name="app_name">OnlineShop</string>
    <string name="textview">TextView</string>
    <string name="car_details">Car Details</string>
    <string name="car_name">Car Name</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="add_car">Add Car</string>
    <string name="cancel">Cancel</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="title_activity_settings">Settings</string>
    <string name="item">Item</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="options">Options</string>
    <string name="sensors">Sensors</string>
    <string name="gyroscope">Rotation: </string>
    <string name="temperature">Temperature: </string>
    <string name="pressure">Pressure: </string>
    <string name="light">Light: </string>
    <string name="accelerometer">Acceleration: </string>
    <string name="location">Location</string>
    <string name="coordinates">coordinates</string>
    <string name="camera">Camera</string>
    <string name="take_a_picture">Take a picture</string>
</resources>
